Tabbing behavior improvements; Clarify some of the existing comments Add logic for shift+tab Prevent default behavior if a custom tab element is found

--- a/src/main/content/_assets/css/toc-multipane.scss
+++ b/src/main/content/_assets/css/toc-multipane.scss
@@ -61,6 +61,7 @@
 
 #breadcrumb_hamburger:focus{
     outline: none;
+    box-shadow: 0 0 2px 2px #51a7e8; /* keyboard-only focus styles */
 }
 
 #breadcrumb_hamburger .icon-bar {
